feat: add notification workflows
