# src/main/java/com/example/teamflow/notification/entity/NotificationType.java
@@ -1,0 +1,7 @@
+package com.example.teamflow.notification.entity;
+
+public enum NotificationType {
+    ASSIGNED,
+    SHARED,
+    COMMENTED
+}
